--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "compile": "tsc",
+    "compile": "tsc -b",
     "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chatgpt": "^2.0.7",
     "discord.js": "^14.6.0"
   },
   "devDependencies": {
